k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-app
  labels:
    app: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: caddy
        image: jmuachifi/caddy-app:latest  # <-- Replace with your image
        ports:
        - containerPort: 80
